# Wisp-of-the-Will

./: .gitignore  CMakeLists.txt  README.md
res/levels/: level_game.txt
res/save/: current_skin.txt
src/: asset_manager.cpp  asset_manager.hpp  game.cpp  game.hpp  game_over_state.cpp  game_over_state.hpp  game_state.cpp  game_state.hpp  input_manager.cpp  input_manager.hpp  level.cpp  level.hpp  main.cpp  main_menu_state.cpp  main_menu_state.hpp  obstacle.cpp  obstacle.hpp  pause_state.cpp  pause_state.hpp  player.cpp  player.hpp  resources.cpp  resources.hpp  splash_state.cpp  splash_state.hpp  state.hpp  state_machine.cpp  state_machine.hpp  timer.hpp  walls.cpp  walls.hpp
